--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ subjects:
 - !lcc 'DS'
 - !lcsh 'Fairy tales -- Japan'
 - !lcsh 'Children -- Japan'
+- GITenberg
 title: Child-Life in Japan and Japanese Child Stories
 url: http://www.gutenberg.org/ebooks/28979
